--- a/styles/globals.css
+++ b/styles/globals.css
@@ -77,6 +77,10 @@
     @apply after:content-['*'] after:ml-0.5 after:text-red-500
   }
 
+  textarea{
+    @apply w-full h-20 p-5 rounded-md bg-white/50 border-2 border-gray-200
+  }
+
   input[type=radio]{
     @apply w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600 
   }
